<resources>
    <string name="app_name">Beehive</string>
    <string name="Home">Home</string>
    <string name="AddPost">Add Post</string>
    <string name="MoodStatistic">Mood Statistics</string>
    <string name="Settings">Settings</string>
    <string name="welcome">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up2">New User? Register Now</string>
    <string name="name">Name</string>
    <string name="Welcome">Welcome</string>
    <string name="media">media</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="languange">Languange</string>
    <string name="about_app">About App</string>
    <string name="log_out">Log Out</string>
    <string name="Forum">Forum</string>
    <string name="search">Search</string>
    <string name="text_post">Compose your message here...</string>
    <string name="category">Category</string>
    <string name="motivation">Motivation</string>
    <string name="work">Work</string>
    <string name="relationship">Relationship</string>
    <string name="finance">Finance</string>
    <string name="link">Link</string>
    <string name="send">Send</string>
    <string name="image_content">Image Content</string>
    <string name="content_title">Title Content</string>
    <string name="content_category">Category Content</string>
    <string name="no_handphone">No Handphone</string>
    <string name="user_avatar">Image</string>
    <string name="source">Source</string>
    <string name="published">Published</string>
    <string name="updated">Updated</string>
    <string name="keyword">Keyword :</string>
    <string name="text_title">Title</string>
    <string name="success">Post Success</string>
    <string name="successLogin">Login Success</string>
    <string name="successVoting">Voting Success</string>
    <string name="your_rate">Your Rate</string>
</resources>