<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cd_socialmedia"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="7dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/rounder"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:elevation="2dp"
    app:strokeWidth="2dp">

    <RelativeLayout
        android:id="@+id/ll_media"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/iv_media"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:background="@drawable/rounder"
            android:contentDescription="@string/media"
            android:scaleType="centerCrop" />

        <ToggleButton
            android:id="@+id/tb_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="150dp"
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn="" />

        <ImageButton
            android:id="@+id/ib_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="200dp"
            android:layout_marginVertical="150dp"
            android:background="@drawable/ic_comment" />

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="300dp"
            android:layout_marginVertical="150dp"
            android:background="@drawable/ic_share" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_social"
        android:layout_marginTop="190dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/tv_desctiption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

</androidx.cardview.widget.CardView>